# ai-engram

./: .aiengram_memory.jsonl  .env.social-scheduler.example  .gitignore  AGENTS.md  AI and the Value of Expertise.md  Brand Voice Profile.md  Content Calendar - 20 Post Outlines.md  KB - influencial AI blogs.md  Post Outline - AI and Expertise Value.md  Prompt - PRD creation workflow.md  Prompt - deep post ideas.md  Prompt - my brand architect.md  Prompt - thought partner and blog writer.md  README.md  aiengram.py  aiengram_mcp.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
Blog Posts/: 01 - posted blog - AI Commodifies Knowledge Expertise Thrives.md  02 - blog - Vision Forms In Isolation.md  03 - blog - The Specialist Generalist Paradox.md  04 - blog - Speed Versus Depth.md  05 - blog - Theory Versus Practice.md  06 - blog - Open Source Versus Product.md  07 - blog - Chasing Trends Versus Building Fundamentals.md  08 - blog - Multimodal Thinking.md  09 - blog - Production Versus Research.md  10 - blog - Teaching To Learn.md  11 - blog - Building Tools Versus Using Tools.md  12 - blog - Start Before You Are Ready.md  13 - blog - Deep Work In Age Of Infinite Content.md  14 - blog - Betting On Yourself Versus Following Proven Paths.md  15 - blog - Simplicity In Complexity.md  16 - blog - First Principles Versus Copying Patterns.md  17 - blog - Building Audience Versus Building Product.md  18 - blog - Long Term Bets Versus Short Term Wins.md  19 - blog - Being Early Versus Being Right.md  20 - blog - Reinvention Through Destruction.md  (+6 more)
(+56 files in other folders)
