[project]
name = "aiengram"
version = "1.0.0"
description = "Semantic search & persistent memory for markdown workspaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MikeS071" }]
keywords = ["markdown", "search", "semantic", "bm25", "mcp", "memory"]

dependencies = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "freezegun>=1.5",
]

[project.scripts]
aiengram = "aiengram:main"
